2008-08-13  Arno Rehn  <arno@arnorehn.de>

    * Make the KSharedPointer marshaller more generic and add one for
      KSharedPtr<KMimeType>.
    * Parse the main mono config after the domain was initialized. This
      fixes some libs being not found (like libc).

2008-08-05  Richard Dale  <richard.j.dale@gmail.com>

	* Make KApplication and KUniqueApplication partial classes and add the
	  code to set the 'qApp' global variable in *Extras.cs files instead of
	  generating it in the source code generator as it's more easily
	  maintained that way.

2008-08-03  Arno Rehn  <arno@arnorehn.de>

	* Implemented KUrl.List.

2008-07-31  Arno Rehn  <arno@arnorehn.de>

	* Assign a new KApplication instance to the qApp global variable.

2008-07-07  Arno Rehn  <arno@arnorehn.de>

	* KimonoPluginFactory: If a class isn't found in the assembly, look
	  through all of the classes and pick the first one that implements
	  the interface and has a matching constructor.
	* Allow to call InitRuntime() multiple times to make sure that every
	  binding is initialized.

2008-07-06  Arno Rehn  <arno@arnorehn.de>

	* mono_jit_cleanup() is now called from a function that is registered
	  via atexit(). This seems to be the only way to do that, since calling
	  it from the destructor of KimonoPluginFactory makes mono crash.
	* Added camelize() method from krubypluginfactory.
	* Added "KSharedPtr<KSharedConfig>" to the marshallers array.

2008-07-01  Arno Rehn  <arno@arnorehn.de>

	* Added KMonoPluginFactory. Behaves similar to KRubyPluginFactory:
		* If the keyword is Foo/Bar.dll, a class 'Bar' is searched in the
		  namespace 'Foo'.
		* This class has to have a constructor that takes a QObject (the
		  parent) and a List<QVariant> (the arguments).

2008-06-24  Richard Dale  <richard.j.dale@gmail.com>

	* Make both the smoke lib and the kimono bindings use non-const methods
	  in preference to const ones. This is because KConfigBase::group() 