@@ -33,7 +33,7 @@ IF (MONO_INCLUDES)
     INCLUDE_DIRECTORIES(${MONO_INCLUDES} ${GLIB_INCLUDES})
     ADD_DEFINITIONS(${GLIB_CFLAGS} ${MONO_CFLAGS})
     KDE4_ADD_PLUGIN(kimonopluginfactory ${SRC_FACTORY})
-    TARGET_LINK_LIBRARIES(kimonopluginfactory ${KDE4_KDECORE_LIBS} qyotoshared ${MONO_LINK_FLAGS})
+    TARGET_LINK_LIBRARIES(kimonopluginfactory ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} ${KDE4_KDECORE_LIBS} ${KDE4_KIO_LIBS} qyotoshared ${MONO_LINK_FLAGS})
     INSTALL(TARGETS kimonopluginfactory DESTINATION ${PLUGIN_INSTALL_DIR})
 ELSE (MONO_INCLUDES)
     MESSAGE(STATUS "Mono includes not found. kimonopluginfactory will not be compiled.")
@@ -47,3 +47,4 @@ INSTALL(TARGETS kimono LIBRARY DESTINATION ${LIB_INSTALL_DIR})
 INSTALL_GAC(kde-dotnet)
 
 add_subdirectory(tutorials EXCLUDE_FROM_ALL)
+add_subdirectory(examples EXCLUDE_FROM_ALL)
